updated lib versions