@@ -26,8 +26,13 @@
         <maven.build.timestamp.format>yyyy.MMdd.HHmm</maven.build.timestamp.format>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
 
-        <version.java>1.8</version.java>
-        <version.compiler.plugin>2.3.2</version.compiler.plugin>
+        <run-headless>-Djava.awt.headless=true</run-headless>
+        <memory-args>-Xmx1024m -Xms1024m</memory-args>
+        <compiler-args></compiler-args> <!-- default = none, see profile for 21 below -->
+        <no-path-check>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</no-path-check>
+        <test-args>${memory-args} ${no-path-check} ${run-headless}</test-args>
+        <version.maven.compiler>3.11.0</version.maven.compiler>
+        <version.maven-resources>3.3.1</version.maven-resources>
 
         <version.jaxb-api>2.3.0</version.jaxb-api>
         <version.jaxrs-json>2.9.8</version.jaxrs-json>
@@ -37,6 +42,7 @@
         <version.spring-data>2.5.10</version.spring-data>
         <version.spring-cloud>3.1.7</version.spring-cloud>
         <version.spring-context>5.3.27</version.spring-context>
+        <version.enunciate>2.14.0</version.enunciate>
         <version.hibernate>5.6.5.Final</version.hibernate>
         <version.apache-cxf>3.5.5</version.apache-cxf>
         <version.slf4j>1.7.30</version.slf4j>
@@ -171,7 +177,7 @@
             <dependency>
                 <groupId>com.webcohesion.enunciate</groupId>
                 <artifactId>enunciate-core-annotations</artifactId>
-                <version>2.14.0</version>
+                <version>${version.enunciate}</version>
             </dependency>
             <dependency>
                 <groupId>javax.xml.bind</groupId>
@@ -236,20 +242,92 @@
     </dependencyManagement>
   
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.maven.compiler}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${version.maven-resources}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.compiler.plugin}</version>
                 <configuration>
-                    <source>${version.java}</source>
-                    <target>${version.java}</target>
+                    <compilerArgs>${compiler-args}</compilerArgs>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
-            </plugin>
+           </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>java-1.8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-9-10-support-1.8</id>
+            <activation>
+                <jdk>[9,11)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-11-16-support-11</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[11,17)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
+                <maven.compiler.release>11</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-17-plus</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[17,21)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+                <maven.compiler.release>17</maven.compiler.release>
+                <version.enunciate>2.15.0</version.enunciate>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-21-plus</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <jdk>[21,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>21</maven.compiler.target>
+                <maven.compiler.release>21</maven.compiler.release>
+                <version.enunciate>2.15.0</version.enunciate>
+                <version.spring-boot>3.1.4</version.spring-boot>
+                <compiler-args>-proc:full</compiler-args>
+            </properties>
+        </profile>
+    </profiles>
 </project>
